--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -62,8 +62,12 @@ main {
   max-width: 1280px;
 }
 
+body,
+html {
+  height: 100%;
+}
+
 body {
-  height: 100vh;
   margin: auto;
   color: var(--color-text);
   background:
