--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,9 +2,55 @@
 @import 'tailwindcss';
 
 @theme {
-  --color-primary: #7fb384;
+  --color-primary-50: #b9d5bb;
+  --color-primary-100: #b2d1b5;
+  --color-primary-200: #a5caa9;
+  --color-primary-300: #99c29d;
+  --color-primary-400: #8cbb90;
+  --color-primary-500: #7fb384;
+  --color-primary-600: #65a46b;
+  --color-primary-700: #548d59;
+  --color-primary-800: #447349;
+  --color-primary-900: #355a39;
+  --color-primary-950: #2e4d31;
+
+  --color-secondary-50: #fefcf1;
+  --color-secondary-100: #fcf9df;
+  --color-secondary-200: #f9f3c3;
+  --color-secondary-300: #f5eda3;
+  --color-secondary-400: #f1e57a;
+  --color-secondary-500: #edde55;
+  --color-secondary-600: #e8d62b;
+  --color-secondary-700: #d4c117;
+  --color-secondary-800: #aa9b12;
+  --color-secondary-900: #857a0e;
+  --color-secondary-950: #6f6b30;
 }
 
-.pattaya {
-  font-family: 'Pattaya', sans-serif;
-}
+/* @media (prefers-color-scheme: dark) {
+  @theme {
+    --color-primary-950: #b9d5bb;
+    --color-primary-900: #b2d1b5;
+    --color-primary-800: #a5caa9;
+    --color-primary-700: #99c29d;
+    --color-primary-600: #8cbb90;
+    --color-primary-500: #7fb384;
+    --color-primary-400: #65a46b;
+    --color-primary-300: #548d59;
+    --color-primary-200: #447349;
+    --color-primary-100: #355a39;
+    --color-primary-50: #2e4d31;
+
+    --color-secondary-950: #fefcf1;
+    --color-secondary-900: #fcf9df;
+    --color-secondary-800: #f9f3c3;
+    --color-secondary-700: #f5eda3;
+    --color-secondary-600: #f1e57a;
+    --color-secondary-500: #edde55;
+    --color-secondary-400: #e8d62b;
+    --color-secondary-300: #d4c117;
+    --color-secondary-200: #aa9b12;
+    --color-secondary-100: #857a0e;
+    --color-secondary-50: #6e650c;
+  }
+} */
